# Api_Ecology

./: README.md  env_example
api/: Dockerfile  main.py  pyproject.toml
api/api_v1/: __init__.py  dependencies.py
api/api_v1/analysis/: models.py  schemas.py  views.py
api/api_v1/auth_jwt/: jwt_auth.py  schemas.py
api/api_v1/data/: models.py  schemas.py  views.py
api/api_v1/routes/: models.py  schemas.py  views.py
api/api_v1/sensors/: models.py  schemas.py  views.py
api/auth/: README.md  dependencies_auth.py
api/certs/: jwt-private.pem  jwt-public.pem
api/core/: config.py
api/core/models/: base.py  db_helper.py
api/exception/: exceptions.py
api/migrations/: env.py
api/migrations/versions/: 2024_02_27_1811-aca05d4ea201_db_create.py
api/tasks/: Dockerfile  requirements.txt  tasks.py
api/users/: models.py  schemas.py  views.py
nginx-conf/: nginx.conf
